go/auto/test/errors/compilation_error/dotnet/Program.cs
using System.Threading.Tasks;
using Khulnasoft;

class Program
{
    static Task<int> Main() => Deployment.RunAsync<MyStack>();
}
